<resources>
    <string name="app_name">ScrollVIEW we</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="enter_phone_number">Enter phone Number</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_district">Enter district</string>
    <string name="enter_address">Enter Address</string>
</resources>